--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
+    "@types/react-native-dotenv": "^0.2.0",
     "expo": "~41.0.0",
     "expo-app-loading": "^1.0.3",
     "expo-status-bar": "~1.0.4",
+    "firebase": "8.2.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-dotenv": "^2.5.5",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-paper": "^4.7.2",
     "react-native-reanimated": "~2.1.0",
