--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "react-native-screens": "~3.0.0",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "victory-native": "^35.3.2",
+    "react-native-svg": "12.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
