--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "@types/react-native-dotenv": "^0.2.0",
+    "@types/react-redux": "^7.1.16",
     "expo": "~41.0.0",
     "expo-app-loading": "^1.0.3",
     "expo-status-bar": "~1.0.4",
@@ -28,7 +29,7 @@
     "react-native-screens": "~3.0.0",
     "react-native-svg": "12.1.0",
     "react-native-web": "~0.13.12",
-    "react-redux": "^7.2.1",
+    "react-redux": "^7.2.3",
     "redux": "^4.0.5",
     "victory-native": "^35.3.2"
   },
